Create home page route with express

--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sea-rock-doves-2017/beandust-team-mocha.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sea-rock-doves-2017/beandust-team-mocha/issues"
+  },
+  "homepage": "https://github.com/sea-rock-doves-2017/beandust-team-mocha#readme"
 }
